--- a/grandtrip/.env
+++ b/grandtrip/.env
@@ -1,1 +1,2 @@
-API_URL="https://localhost:"
+REACT_APP_API_URL="http://localhost:8081"
+REACT_APP_API_URL_DEPRECATED="https://grandtrip.herokuapp.com"
