--- a/grandtrip/.env
+++ b/grandtrip/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL="http://localhost:8081"
-REACT_APP_API_URL_DEPRECATED="https://grandtrip.herokuapp.com"
+REACT_APP_API_URL_DEPRECATED="http://localhost:8081"
+REACT_APP_API_URL="https://grandtrip.herokuapp.com"
