--- a/grandtrip/.env
+++ b/grandtrip/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL_D="http://localhost:8081"
+REACT_APP_API_URL="http://localhost:8081"
 REACT_APP_API_URL_DEPRECATED="https://grandtrip.herokuapp.com"
-REACT_APP_API_URL="https://grandtrip.onrender.com"
+REACT_APP_API_URL_D="https://grandtrip.onrender.com"
