--- a/grandtrip/.env
+++ b/grandtrip/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_URL="http://localhost:8081"
 REACT_APP_API_URL_D="https://grand-trip.onrender.com"
 REACT_APP_NEW_API_URL_D="https://localhost:5001"
-REACT_APP_NEW_API_URL="http://apigrandtrip.somee.com"
+REACT_APP_NEW_API_URL="https://apigrandtrip.somee.com"
